# cus-core

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
examples/: refuse_harmful_instruction.yaml  summarize_for_student.yaml
src/cus/: __init__.py  grader.py  models.py  task_loader.py
src/cus_core/: __init__.py  audit.py  grader.py  task_loader.py
tests/: test_audit.py  test_grader.py  test_models.py  test_task_loader.py
